Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Not-So-Little Women: Life in 19th Century United States by lizrush</title>
+    <title>Not-So-Little Women by lizrush</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Not-So-Little Women: Life in 19th Century United States</h1>
+        <h1>Not-So-Little Women</h1>
         <p>A book generated for National Novel Generation Month </p>
       </header>
 
