Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Not-So-Little Women</h1>
-        <p>A book generated for National Novel Generation Month </p>
+        <p>A book generated for NaNoGenMo 2015 based on 19th century female authors</p>
       </header>
 
       <div id="banner">
